fix z-index in dropdown

--- a/src/components/atoms/Dropdown/Dropdown.css
+++ b/src/components/atoms/Dropdown/Dropdown.css
@@ -26,10 +26,12 @@
   animation-duration: 200ms;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
+  z-index: 2;
 }
 
 .dropdownTrigger {
   cursor: pointer;
+  z-index: 0;
 }
 
 @keyframes fadeInDown {
